--- a/VJ.html
+++ b/VJ.html
@@ -2,3 +2,8 @@
   <h1>vj on the floor</h1>
 </center>
 <hr>
+<p>
+  Joseph Vijay Chandrasekhar, known professionally as Vijay, is an Indian actor and playback singer who works in Tamil cinema. Wikipedia
+
+Born: June 22, 1974 (age 49), Madras, Tamil Nadu, India
+</p>
